--- a/test/index.html
+++ b/test/index.html
@@ -10,15 +10,15 @@
   <script src="vendor/underscore.js"></script>
   <script src="../backbone.js"></script>
   <script src="../backbone.namespaced-events.js"></script>
-  <script src="environment.js"></script>
-  <script src="noconflict.js"></script>
-  <script src="events.js"></script>
   <script src="namespaced-events.js"></script>
-  <script src="model.js"></script>
+  <!-- <script src="environment.js"></script>
+  <script src="noconflict.js"></script> -->
+  <script src="events.js"></script>
+  <!-- <script src="model.js"></script>
   <script src="collection.js"></script>
   <script src="router.js"></script>
   <script src="view.js"></script>
-  <script src="sync.js"></script>
+  <script src="sync.js"></script> -->
 </head>
 <body>
   <div id="qunit"></div>
