--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
   <script src="../backbone.js"></script>
   <script src="../backbone.namespaced-events.js"></script>
   <script src="namespaced-events.js"></script>
-  <!-- <script src="environment.js"></script>
-  <script src="noconflict.js"></script> -->
+  <script src="environment.js"></script>
+  <script src="noconflict.js"></script>
   <script src="events.js"></script>
   <!-- <script src="model.js"></script>
   <script src="collection.js"></script>
