tidied up whitespace gave option to overwrite native events, but is no longer the default setting to do so

--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,9 @@
   <script src="vendor/underscore.js"></script>
   <script src="../backbone.js"></script>
   <script src="../backbone.namespaced-events.js"></script>
+  <script>
+      Backbone.NamespacedEvents.overwriteNativeEvents();
+  </script>
   <script src="namespaced-events.js"></script>
   <!-- <script src="environment.js"></script> -->
   <!-- <script src="noconflict.js"></script> -->
